--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.22.1",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.3"
   },
