--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "axios": "^1.7.2",
     "emoji-picker-react": "^4.7.10",
     "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.22.1",
+    "socket.io-client": "^4.7.5",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.3"
   },
